objects/ShippingUpdates__x.object
<CustomObject>
    <externalDataSource>GraphQL_Test</externalDataSource>
    <externalName>Postgres_ShippingUpdates</externalName>
    <externalRepository>Maplink</externalRepository>
    <fields>
        <fullName>City__c</fullName>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <externalDeveloperName>Geolocation</externalDeveloperName>
        <label>Geolocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lat__c</fullName>
        <externalDeveloperName>Lat</externalDeveloperName>
        <label>Lat</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <externalDeveloperName>Location</externalDeveloperName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long__c</fullName>
        <externalDeveloperName>Long</externalDeveloperName>
        <label>Long</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maplink__c</fullName>
        <externalDeveloperName>Maplink</externalDeveloperName>
        <label>Map Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Row__c</fullName>
        <externalDeveloperName>Row</externalDeveloperName>
        <label>Row</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <externalDeveloperName>State</externalDeveloperName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arrived At Facility</fullName>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <externalDeveloperName>Timestamp</externalDeveloperName>
        <label>Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tr__c</fullName>
        <externalDeveloperName>Tr</externalDeveloperName>
        <label>Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpdateId__c</fullName>
        <externalDeveloperName>UpdateId</externalDeveloperName>
        <label>Update ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vin__c</fullName>
        <externalDeveloperName>Vin</externalDeveloperName>
        <label>Vehicle</label>
        <length>255</length>
        <referenceTargetField>Vehicle__c.VIN__c</referenceTargetField>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Shipment Updates</relationshipLabel>
        <relationshipName>Shipment_Updates</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <label>Shipment Update</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Location__c</columns>
        <columns>DisplayUrl</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Shipment Updates</pluralLabel>
</CustomObject>